# Watheeq-AI

./: .gitignore  README.md  package-lock.json
.github/workflows/: e2e.yml
backend/: create_admin.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: ai_analysis.py  auth.py  claims.py  examiner.py  policies.py
backend/app/core/: config.py
backend/app/models/: ai_analysis.py  claim.py  policy.py
backend/app/services/: auth_service.py  claims_service.py  firestore_client.py  policy_service.py
backend/app/services/ai/: analysis_service.py  events.py  exceptions.py  llm_service.py  pdf_service.py  prompts.py  response_service.py  store.py
backend/app/utils/: cloudinary_client.py
docs/testing/: e2e.md
e2e/: .env.test.example  auth.setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/data/fixtures/: invalid.txt
e2e/fixtures/: base.fixture.ts
e2e/pages/: admin-dashboard.page.ts  admin-login.page.ts  admin-policies.page.ts  admin-requests.page.ts  claimant-claim-detail.page.ts  claimant-claims.page.ts  claimant-new-claim.page.ts  examiner-claim-detail.page.ts  examiner-claims.page.ts  login.page.ts  register.page.ts
e2e/tests/admin/: dashboard.spec.ts  examiner-requests.spec.ts  policies.spec.ts
e2e/tests/auth/: admin-login.smoke.spec.ts  session.spec.ts  (+3 more)
e2e/utils/: api-helpers.ts  env.ts  test-data.ts  test-seed.ts
firebase/: firestore.rules
frontend/: .env.example  package-lock.json  package.json  tailwind.config.mjs  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
(+64 files in other folders)
