[project]
name = "watheeq-ai-backend"
version = "0.1.0"
description = "Watheeq AI Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "firebase-admin>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "cloudinary>=1.36.0",
    "python-multipart>=0.0.9",
]
